syntax = "proto3";

option go_package = "proto/beacon";

import "google/protobuf/empty.proto";

package beacon;

service BeaconService {
  rpc Register(RegisterRequest)
      returns (RegisterResponse);

  rpc Deregister(DeregisterRequest)
      returns (google.protobuf.Empty);

  rpc BuildImage(BuildImageRequest)
      returns (stream BuildImageResponse);

  rpc CreateContainer(CreateContainerRequest)
      returns (stream CreateContainerResponse);

  rpc AcquireContainerEndpoint(AcquireContainerEndpointRequest)
      returns (stream AcquireContainerEndpointResponse);

  rpc ReleaseContainer(ReleaseContainerRequest)
      returns (google.protobuf.Empty);
}

enum ResourcePolicy {
  ERROR = 0;
  REUSE = 1;
  TAKE_OVER = 2;
}

message RegisterRequest {
  string namespace = 1;
  ResourcePolicy resource_policy = 2;
}

message RegisterResponse {
  string client_id = 1;
  bytes network_resource = 2;
}

message DeregisterRequest {
  string client_id = 1;
  string namespace = 2;
}

message BuildImageRequest {
  string context_dir = 1;
  bytes build_options = 2;
  bool force = 3;
}

message Message {
  string message = 1;
}

message BuiltImage {
  string image_tag = 1;
}

message BuildImageResponse {
  oneof processing {
    Message building = 1;
    BuiltImage built = 2;
  }
}

message CreateContainerRequest {
  string client_id = 1;
  string name = 2;
  bytes container_config = 3;
  bytes host_config = 4;
  bytes networking_config = 5;
  bool check_config_consistency = 6;
  optional bytes pull_config = 7;
}

message CreatedContainer {
  string container_id = 1;
}

message CreateContainerResponse {
  oneof processing {
    Message pulling = 1;
    CreatedContainer created = 2;
  }
}

message AcquireContainerEndpointRequest {
  string client_id = 1;
  string container_name = 2;
  bool exclusive = 3;
}

message PortBinding {
  string host_ip = 1;
  string host_port = 2;
}

message Endpoints {
  repeated PortBinding bindings = 1;
}

message AcquireContainerEndpointResponse {
  map<string, Endpoints> endpoints = 1;
}

message ReleaseContainerRequest {
  string client_id = 1;
  string container_name = 2;
}
